se agrega botón de info en credit-condition, se arreglan temas de alineación en credit-disburce

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <router-outlet></router-outlet>
-
+<br><br>
+<app-credit-disburse></app-credit-disburse>
 <!-- <app-otp></app-otp> -->
 <!-- <app-add-product></app-add-product> -->
 <!-- <app-dashboard></app-dashboard> -->
