--- a/src/app/pages/credit-disburse/credit-disburse.component.html
+++ b/src/app/pages/credit-disburse/credit-disburse.component.html
@@ -23,10 +23,12 @@
             <div class="tx-value">[19]% E.A.</div>
             <div class="tittle">Tasa Mensual Vencida </div>
             <div class="tx-value">[1.46]% E.A.</div>
-            <div class="tx-monto-cuota">[$246.920]</div>
-            <div class="tx-monto">Tu cuota mensual aproximada mas seguro de vida
-                <div class="tx-vl-seguro">
-                    [$2.140]
+            <div class="info-seguro">
+                <div class="tx-monto-cuota">[$246.920]</div>
+                <div class="tx-monto">Tu cuota mensual aproximada mas seguro de vida
+                    <span class="tx-vl-seguro">
+                        [$2.140]
+                    </span>
                 </div>
             </div>
         </div>
