--- a/src/app/pages/credit-conditions/credit-conditions.component.css
+++ b/src/app/pages/credit-conditions/credit-conditions.component.css
@@ -98,6 +98,13 @@
         justify-self: center;
         grid-area: tx-cuota; 
     }
+    .bi {
+        color: #01AAF5
+    }
+
+        .tx-vl-seguro {
+            color: #1860BF;
+        }
     
     .inf-tasa-ea {  display: grid;
         grid-template-columns: 1.5fr 0.5fr;
@@ -240,6 +247,11 @@
         grid-area: tx-deuda-t; }
     
     .tx-sg-vida { 
+        font-weight: 300;
+        font-size: 12px;
+        line-height: 40px;
+
+        color: #000000;
         justify-self: center;
         grid-area: tx-sg-vida; 
     }
@@ -256,6 +268,11 @@
     }
     
     .tx-inf-ayuda { 
+        font-weight: 300;
+        font-size: 12px;
+        line-height: 40px;
+
+        color: #000000;
         justify-self: center;
         grid-area: tx-inf-ayuda; 
     }
@@ -280,4 +297,6 @@
         color: #1860bf;
         font-size: 15px;
     }
+
+
 
