--- a/src/app/pages/credit-disburse/credit-disburse.component.html
+++ b/src/app/pages/credit-disburse/credit-disburse.component.html
@@ -1,6 +1,9 @@
 <body>
     <div>
-        <app-header-cbit></app-header-cbit>
+        <app-header-cbit
+            (onClickEventBack)="goToPage(routes.back)"
+            (onClickEventHelp)="goToPage(routes.help)"
+        ></app-header-cbit>
     </div>
     <div class="container-indicator">
         <h1 class="titulo">Su crédito [Tipocredito] fue desembolsado</h1>
