--- a/src/app/pages/my-products/my-products.component.html
+++ b/src/app/pages/my-products/my-products.component.html
@@ -21,7 +21,7 @@
           [categorySelected]="categorySelected"
           (onProductSelected)="setProductSelected($event)"
         ></app-list-product-vertical>
-        <div class="btn-adicionar">
+        <div class="btn-adicionar" (click)="goToPage(routes.addProduct)">
           <i class="bi bi-plus-circle-fill"></i>
           <p class="txt-solicitar">Solicitar productos</p>
         </div>
