--- a/src/app/components/headers/header-menu/header-menu.component.css
+++ b/src/app/components/headers/header-menu/header-menu.component.css
@@ -3,6 +3,8 @@ body {
   position: sticky;
   top: 0;
   z-index: 5;
+  border-bottom: 2.5px solid #E9DADA;
+ /* Margen inferior de 30px */
 }
 img {
   min-width: 200px;
@@ -18,4 +20,6 @@ img {
   align-items: center;
   position: sticky;
   top: 0;
+
+  margin-bottom: .5rem;
 }
