--- a/src/app/components/lists/list-product-vertical/list-product-vertical.component.css
+++ b/src/app/components/lists/list-product-vertical/list-product-vertical.component.css
@@ -4,7 +4,7 @@ p {
 .cabecera{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto auto auto auto auto auto auto;
+  grid-template-rows: auto auto;
   gap: 0px 0px;
   grid-auto-flow: row;
   grid-template-areas:
