--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<router-outlet></router-outlet>
+<!-- -- <router-outlet></router-outlet>  -->
 
 <!-- <app-otp></app-otp> -->
 <!-- <app-add-product></app-add-product> -->
@@ -22,3 +22,8 @@
 <!-- <app-tyc-banks></app-tyc-banks> -->
 <!-- <app-voucher></app-voucher> -->
 <!-- <app-wallet></app-wallet> -->
+<!-- <app-credit-reject></app-credit-reject> -->
+<!-- <app-rejected-message></app-rejected-message> -->
+<!-- <app-item-menu></app-item-menu> -->
+<app-menu></app-menu>
+
