--- a/src/app/pages/credit-reject/credit-reject.component.html
+++ b/src/app/pages/credit-reject/credit-reject.component.html
@@ -1,7 +1,5 @@
 <body>
-  <app-header-cbit
-
-  ></app-header-cbit>
+  <app-header-cbit class="transparent-background"></app-header-cbit>
 
   <div class="contenedor">
 
