--- a/src/app/components/utils/item-menu/item-menu.component.css
+++ b/src/app/components/utils/item-menu/item-menu.component.css
@@ -1,72 +1,72 @@
 .sidenav {
-  background-color: #00B0F9;
-  width: 100%;
-  height: 89vh;
-  display: flex;
-  flex-direction: column;
-}
+  background-color: #00B0F9; /* Gradient for background */
+  background-image: linear-gradient(to bottom, #00B0F9 0%, #00BFCF 100%);
+  /* Stretch image to fill container */
+    width: 100%;
+    height: 89vh;
+    display: flex;
+    flex-direction: column;
 
-.menu {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  background-color: transparent;
-}
+  }
 
-.menu li.nav-item {
+  .menu {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
 
-  background-color: #00B0F9;
-}
+  .menu li.nav-item {
+    background-color: transparent; /* Remove unnecessary background color */
+  }
 
-.menu a.nav-link {
-  display: flex;
-  align-items: center;
-  padding: 10px 15px; /* Adjust padding if needed */
-  text-decoration: none;
-  color: #ffffff; /* Dark gray */
-}
+  .menu a.nav-link {
+    display: flex;
+    align-items: center;
+    padding: 10px 15px; /* Adjust padding if needed */
+    text-decoration: none;
+    color: #ffffff; /* Dark gray */
+  }
 
-.menu a.nav-link:hover { /* Add hover effect */
-  background-color: #0f33ac; /* Light gray background on hover */
-}
+  .menu a.nav-link:hover { /* Add hover effect */
+    background-color:rgba(119, 18, 57, 0.1); /* Light gray background on hover */
+  }
 
-.menu a.nav-link i {
-  font-size: 1.5em;
-  margin-right: 10px;
-}
+  .menu a.nav-link i {
+    font-size: 1.5em;
+    margin-right: 10px;
+  }
 
-.profile {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
+  .profile {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    margin: 15px;
+  }
 
-.profile button,
-.profile a {
-  display: block;
-  width: 100%; /* Make buttons and links fill the width */
-  padding: 10px 20px;
-  text-align: left; /* Align text to the left */
-  text-decoration: none;
-  color: white;
-  background-color: transparent; /* Remove default background color */
-  border: none; /* Remove default border */
-  cursor: pointer; /* Indicate clickable elements */
-}
+  .profile button,
+  .profile a {
+    display: block;
+    width: 100%; /* Make buttons and links fill the width */
+    padding: 10px 20px;
+    text-align: left; /* Align text to the left */
+    text-decoration: none;
+    color: white;
+    background-color: transparent; /* Remove default background color */
+    border: none; /* Remove default border */
+    cursor: pointer; /* Indicate clickable elements */
+  }
 
-.profile button:hover,
-.profile a:hover {
-  background-color: rgba(136, 23, 66, 0.1); /* Slight gray background on hover */
-}
+  .profile button:hover,
+  .profile a:hover {
+    background-color: rgba(56, 8, 27, 0.2); /* Slight gray background on hover */
+  }
 
-.profile .btn-danger {
-  background-color: #2295c2; /* Red */
-}
 
-.profile .btn-primary {
-  background-color: #2295c2;
-}
-
-.profile {
-  margin-top: auto;
-}
+  .profile {
+    margin-top: auto; /* Move buttons to bottom */
+    margin-bottom: 3.5rem; /* Add bottom margin for spacing */
+  }
