--- a/src/app/components/utils/item-menu/item-menu.component.html
+++ b/src/app/components/utils/item-menu/item-menu.component.html
@@ -2,37 +2,37 @@
   <ul class="menu">
     <li class="nav-item">
       <a routerLink="/" class="nav-link active">
-        <i class="bi bi-house-door"></i>
+        <i class="bi bi-house-fill"></i>
         <span class="ml-2">Inicio</span>
       </a>
     </li>
     <li class="nav-item">
       <a routerLink="/productos" class="nav-link">
-        <i class="bi bi-cart"></i>
-        <span class="ml-2">Productos</span>
+        <i class="bi bi-credit-card-fill"></i>
+        <span class="ml-2">Mis productos</span>
       </a>
     </li>
     <li class="nav-item">
       <a routerLink="/solicitar" class="nav-link">
-        <i class="bi bi-folder-plus"></i>
-        <span class="ml-2">Solicitar</span>
+        <i class="bi bi-plus-circle-fill"></i>
+        <span class="ml-2">Agregar Produto</span>
       </a>
     </li>
     <li class="nav-item">
       <a routerLink="/afiliar" class="nav-link">
-        <i class="bi bi-person-add"></i>
-        <span class="ml-2">Afiliar</span>
+        <i class="bi bi-bag-plus-fill"></i>
+        <span class="ml-2">Solicitar Producto</span>
       </a>
     </li>
   </ul>
   <div class="profile mt-auto">
     <button class="btn btn-danger">
-      <i class="bi bi-door-closed"></i>
-      Cerrar sesión
+      <i class="bi bi-person-fill"></i>
+      Perfil
     </button>
     <a routerLink="/perfil" class="btn btn-primary">
-      <i class="bi bi-person-circle"></i>
-      Perfil
+      <i class="bi bi-arrow-left-circle-fill"></i>
+      Cerrar sesión
     </a>
   </div>
 </nav>
