--- a/src/app/components/lists/list-product-vertical/list-product-vertical.component.css
+++ b/src/app/components/lists/list-product-vertical/list-product-vertical.component.css
@@ -2,18 +2,29 @@ p {
   margin: 0;
 }
 .cabecera{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto auto;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas:
-  "tituloProduct btn-adicionar";
+  width: 95%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
-.bi-plus-circle-fill{
-  font-size: 30px;
-  color:#01A7F4;
-}
+  .botones {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 0 0 0;
+  }
+  .btn-adicionar {
+    cursor: pointer;
+  }
+  .nombreTipo, .btn-adicionar {
+    display: flex;
+    align-items: center;
+  }
+  .bi-plus-circle-fill{
+    font-size: 30px;
+    color:#01A7F4;
+  }
 .txt-solicitar{
   background-color: #FFFFFF;
   border-radius: 12px;
@@ -63,9 +74,4 @@ p {
 .valores p {
   font-size: 12px;
 }
-.boton {
-  font-size: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
