--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <router-outlet></router-outlet>
+
 <!-- <app-otp></app-otp> -->
 <!-- <app-add-product></app-add-product> -->
 <!-- <app-dashboard></app-dashboard> -->
@@ -25,4 +26,6 @@
 <!-- <app-rejected-message></app-rejected-message> -->
 <!-- <app-item-menu></app-item-menu> -->
 <!-- <app-menu></app-menu> -->
+<!-- <app-credit-verify></app-credit-verify> -->
+<!-- <app-credit-preapproved></app-credit-preapproved> -->
 
