En select-entity.component se crea condicional en funcion selectedEntity(), dependiando de si se quiere crear o se queire solicitar un producto redireccione a su respectivo componente

--- a/src/app/components/lists/list-product-vertical/list-product-vertical.component.html
+++ b/src/app/components/lists/list-product-vertical/list-product-vertical.component.html
@@ -10,7 +10,7 @@
             {{ type.nombreTipo }}s
           </h5>
         </div>
-        <div class="btn-adicionar" (click)="goToPage(routes.addProduct)">
+        <div class="btn-adicionar" (click)="goToPage(routes.requestProduct)">
           <i class="bi bi-plus-circle-fill"></i>
           <p class="txt-solicitar">Solicitar productos</p>
         </div>
