--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,4 +25,4 @@
 <!-- <app-rejected-message></app-rejected-message> -->
 <!-- <app-item-menu></app-item-menu> -->
 <!-- <app-menu></app-menu> -->
-
+<!-- <app-list-products></app-list-products> -->
