--- a/src/app/pages/add-product/add-product.component.html
+++ b/src/app/pages/add-product/add-product.component.html
@@ -12,7 +12,8 @@
         class="form-producto container"
       >
         <h1>Producto</h1>
-        <select formControlName="product" class="product">
+        <select formControlName="product" class="product" (subTipoP)="loadSubproducts($event)">
+
           <option value="">Selecciona tu producto</option>
           <option
             *ngFor="let tipo of tiposProducto"
@@ -21,6 +22,17 @@
             {{ tipo.nombreTipo }}
           </option>
         </select>
+
+        <select formControlName="subtProduct" class="subtProduct">
+          <option value="">Selecciona tu </option>
+          <option
+            *ngFor="let subTipo of subtipoPXTipoP"
+            [value]="subTipo.idSubtipo_Producto"
+          >
+            {{ subTipo.nombre }}
+          </option>
+        </select>
+
         <app-btn-cbit
           [type]="'submit'"
           [text]="'Continuar'"
