--- a/src/app/pages/voucher/voucher.component.html
+++ b/src/app/pages/voucher/voucher.component.html
@@ -25,7 +25,7 @@
         <p class="nombre-item">Producto de origen</p>
         <p class="valores">
           {{ typeProduct.nombreTipo }}
-          {{ productF.numeroProducto | valueHidden }}
+          {{ productF.numeroCuenta | valueHidden }}
         </p>
       </div>
       <div class="campo">
