--- a/src/app/pages/select-credit/select-credit.component.css
+++ b/src/app/pages/select-credit/select-credit.component.css
@@ -1,4 +1,4 @@
-.form-producto{
+.form-credito{
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -20,7 +20,7 @@ h4{
   font-weight: bold;
 }
 
-.product {
+.credito {
   margin: 0 auto;
   border: none;
   font-size: 20px;
