se trabaja sobre los ts de list-product y list-product-vertical, queda mostrando los productos en dashboard y en my-products con su repectivo tipo de de producto y monto producto

--- a/src/app/components/lists/list-product-vertical/list-product-vertical.component.html
+++ b/src/app/components/lists/list-product-vertical/list-product-vertical.component.html
@@ -1,13 +1,13 @@
 <div class="list">
   <div
     class="type-and-list"
-    *ngFor="let subtype of subtypesProducts"
+    *ngFor="let type of typesProducts"
   >
     <div class="cabecera">
       <div class="botones">
         <div class="products">
           <h5 class="nombreTipo">
-            {{ subtype.nombre }}s
+            {{ type.nombreTipo }}s
           </h5>
         </div>
         <div class="btn-adicionar" (click)="goToPage(routes.requestProduct)">
@@ -18,7 +18,7 @@
     <div
       class="product"
       *ngFor="
-        let product of productsBySubtype[subtype.nombre]
+        let product of productsByType[type.nombreTipo]
       "
       (click)="setProductSelected(product)"
     >
