--- a/src/app/components/utils/item-menu/item-menu.component.html
+++ b/src/app/components/utils/item-menu/item-menu.component.html
@@ -1,25 +1,25 @@
-<nav class="sidenav">
+<nav class="body">
   <ul class="menu">
-    <li class="nav-item">
-      <a routerLink="/" class="nav-link active">
+    <li class="nav-inicio">
+      <a routerLink="/dashboard" class="nav-link active">
         <i class="bi bi-house-fill"></i>
         <span class="ml-2">Inicio</span>
       </a>
     </li>
     <li class="nav-item">
-      <a routerLink="/productos" class="nav-link">
+      <a routerLink="/products" class="nav-link">
         <i class="bi bi-credit-card-fill"></i>
         <span class="ml-2">Mis productos</span>
       </a>
     </li>
     <li class="nav-item">
-      <a routerLink="/solicitar" class="nav-link">
+      <a routerLink="/products/add/select-entity" class="nav-link">
         <i class="bi bi-plus-circle-fill"></i>
         <span class="ml-2">Agregar Produto</span>
       </a>
     </li>
     <li class="nav-item">
-      <a routerLink="/afiliar" class="nav-link">
+      <a routerLink="/products/add/select-entity" class="nav-link">
         <i class="bi bi-bag-plus-fill"></i>
         <span class="ml-2">Solicitar Producto</span>
       </a>
@@ -30,7 +30,7 @@
       <i class="bi bi-person-fill"></i>
       Perfil
     </button>
-    <a routerLink="/perfil" class="btn btn-primary">
+    <a routerLink="/login" class="btn btn-primary">
       <i class="bi bi-arrow-left-circle-fill"></i>
       Cerrar sesión
     </a>
