--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -4,9 +4,8 @@
     (onClickEventHelp)="goToPage(routes.help)"
   ></app-header-menu>
 
-      <app-item-menu>
-      </app-item-menu>
-  
+      <app-item-menu></app-item-menu>
+
 </body>
 
 
