corrección de errores en componentes (voucher, transaction), con tipo producto y localstorage.get('transaction')

--- a/src/app/pages/voucher/voucher.component.html
+++ b/src/app/pages/voucher/voucher.component.html
@@ -24,7 +24,7 @@
       <div class="campo">
         <p class="nombre-item">Producto de origen</p>
         <p class="valores">
-          {{ typeProduct.nombreTipo }}
+          {{ subtypeProduct.nombre }}
           {{ productF.numeroCuenta | valueHidden }}
         </p>
       </div>
