--- a/src/app/pages/my-products/my-products.component.html
+++ b/src/app/pages/my-products/my-products.component.html
@@ -19,6 +19,7 @@
           [clientId]="user.idCliente!"
           [txtFilterProduct]="txtFilterProduct"
           [categorySelected]="categorySelected"
+          [txtCategorySelected]="txtCategorySelected"
           (onProductSelected)="setProductSelected($event)"
         ></app-list-product-vertical>
       </div>
