--- a/src/app/pages/select-credit/select-credit.component.css
+++ b/src/app/pages/select-credit/select-credit.component.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   height: 60vh;
+  width: 95%; 
 }
 
 h1 {
@@ -11,6 +12,7 @@ h1 {
   font-family: "Open Sans", sans-serif;
   color: #6D6464;
   font-weight: bold;
+  margin-top: 5rem;
 }
 
 h4{
@@ -21,7 +23,9 @@ h4{
 }
 
 .credito {
-  margin: 0 auto;
+  margin-top: 4rem;
+  margin-bottom: 6rem;
+  margin-left: 0.5rem;
   border: none;
   font-size: 20px;
   height: 3.5rem;
@@ -34,15 +38,15 @@ h4{
   text-align: center;
 }
 
-.form-validation {
+.simulation {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   height: 50vh;
-  margin-top: 10%;
+  /* margin-top: 10%; */
 }
 
-.form-validation input{
+.simulation input{
   width: 100%;
   height: 60px;
   border-radius: 5px;
@@ -77,5 +81,7 @@ label {
 .dataProduct{
   text-align: center;
 }
-
+.plazo{
+  margin-bottom: 3rem;
+}
 
