Se ajusta credit-request los estilos y los select quedan OK

--- a/src/app/pages/credit-request/credit-request.component.html
+++ b/src/app/pages/credit-request/credit-request.component.html
@@ -1,43 +1,54 @@
 <body>
-    <app-header-cbit
-    (onClickEventBack)="goToPage(routes.back)"
-    (onClickEventHelp)="goToPage(routes.help)"
-  ></app-header-cbit>
+    <app-header-cbit (onClickEventBack)="goToPage(routes.back)"
+        (onClickEventHelp)="goToPage(routes.help)"></app-header-cbit>
     <div>
         <h1 class="titulo">Completa los siguientes datos</h1>
         <app-indicator></app-indicator>
-    </div>    
+    </div>
 
     <div class="container text-center">
-        <form
-        class="form-validation">
+        <form class="form-validation">
             <div class="campos-form">
-                <p>¿Cuál es su actividad laboral?</p>
-                <select formControlName="work-activity" class="rounded-input">
-                    <option value="">Selecciona una opción</option>
-                    <option value="">Opción 1</option>
-                    <option value="">Opción 2</option>             
-                    <option value="">Opción 3</option>
-                    <option value="">Opción 4</option>
-                    <option value="">Opción 5</option>
-                    <option value="">Opción 6</option>
+                <label for="docCity" class="form-label">¿Cuál es su actividad laboral?</label>
+                <select class="form-select" aria-label="" formControlName="docCity">
+                    <option selected disabled>Selecciona una opción</option>
+                    <option *ngFor="let tipoCliente of tiposCliente" [value]="tipoCliente.idTipo_Cliente">
+                        {{ tipoCliente.nombre }}
+                    </option>
                 </select>
             </div>
             <div class="campos-form">
+                <label 
+                    for="actividadEconomica" 
+                    class="form-label">
+                ¿Cuál es su actividad económica o la de suempresa?
+                </label>  
+                <input type="text" 
+                class="rounded-input" 
+                id="actividadEconomica" 
+                formControlName="actividadEconomica" />
+            </div>
+
+            <div class="campos-form">
                 <p>¿Cuál es su actividad económica o la de su empresa?</p>
-            <input type="text" class="rounded-input">
+                <input type="text" class="rounded-input">
             </div>
             <div class="campos-form">
                 <p>Nombre de la empresa</p>
-            <input type="text" class="rounded-input">
+                <input type="text" class="rounded-input">
             </div>
             <div class="campos-form">
                 <p>¿Cuáles son sus ingresos mensuales?</p>
                 <input type="number" class="rounded-input">
             </div>
             <div class="campos-form">
-                <p>Ciudad donde vive</p>
-                <input type="text" class="rounded-input">
+                <label for="docCity" class="form-label">Ciudad donde vive</label>
+                <select class="form-select" aria-label="" formControlName="docCity">
+                    <option selected disabled>Selecciona una opción</option>
+                    <option *ngFor="let ciudad of ciudades" [value]="ciudad.idCiudad">
+                        {{ ciudad.nombre }}
+                    </option>
+                </select>
             </div>
             <div class="campos-form">
                 <p>Dirección</p>
@@ -45,7 +56,7 @@
             </div>
             <div class="checkbox-form">
                 <p id="cboxAuthorizations">
-                    <input type="checkbox" id="cboxAuthorizations" value="" /> Acepto las autorizaciones 
+                    <input type="checkbox" id="cboxAuthorizations" value="" /> Acepto las autorizaciones
                     <a href="">aquí</a> descritas
                 </p>
             </div>
@@ -53,9 +64,8 @@
     </div>
 
     <div>
-    <app-btn-cbit
-    [text]="'Continuar'"></app-btn-cbit>
+        <app-btn-cbit [text]="'Continuar'"></app-btn-cbit>
     </div>
-    
-  
+
+
 </body>
